Add Azure endpoints for the UI installer data (#468)
* feat(azure): get regions available for azure

* feat(azure): get instance sizes for azure

* feat: list the domains available in azure

* chore: use auth validation methods and fix http codes

---------
