# docs/swagger.yaml
@@ -336,6 +336,8 @@ definitions:
         $ref: '#/definitions/types.AkamaiAuth'
       aws_auth:
         $ref: '#/definitions/types.AWSAuth'
+      azure_auth:
+        $ref: '#/definitions/types.AzureAuth'
       civo_auth:
         $ref: '#/definitions/types.CivoAuth'
       cloud_region:
@@ -509,6 +511,8 @@ definitions:
         $ref: '#/definitions/types.AkamaiAuth'
       aws_auth:
         $ref: '#/definitions/types.AWSAuth'
+      azure_auth:
+        $ref: '#/definitions/types.AzureAuth'
       civo_auth:
         $ref: '#/definitions/types.CivoAuth'
       cloud_region:
