# internal/types/domain.go
@@ -16,12 +16,12 @@ type DomainListRequest struct {
 	ResourceGroup    string                    `json:"resource_group"`
 	AkamaiAuth       pkgtypes.AkamaiAuth       `json:"akamai_auth,omitempty"`
 	AWSAuth          pkgtypes.AWSAuth          `json:"aws_auth,omitempty"`
+	AzureAuth        pkgtypes.AzureAuth        `json:"azure_auth,omitempty"`
 	CivoAuth         pkgtypes.CivoAuth         `json:"civo_auth,omitempty"`
 	DigitaloceanAuth pkgtypes.DigitaloceanAuth `json:"do_auth,omitempty"`
 	VultrAuth        pkgtypes.VultrAuth        `json:"vultr_auth,omitempty"`
 	CloudflareAuth   pkgtypes.CloudflareAuth   `json:"cloudflare_auth,omitempty"`
-	GoogleAuth       pkgtypes.GoogleAuth       `bson:"google_auth,omitempty" json:"google_auth,omitempty"`
-	AzureAuth        pkgtypes.AzureAuth        `bson:"azure_auth,omitempty" json:"azure_auth,omitempty"`
+	GoogleAuth       pkgtypes.GoogleAuth       `json:"google_auth,omitempty"`
 }
 
 // DomainListResponse
